--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ header{
     width: 500px;
     font-size: 24px;
     transition: 0.3s ease-in;
+    z-index: 1;
 }
 .sdie_link
 {
@@ -85,6 +86,7 @@ header{
 /*bot intro*/
 .bot_intro_0
 {
+    text-align: center;
     font-size: 900%;
     font-weight: 800;
     padding-top: 0%;
@@ -92,6 +94,7 @@ header{
 }
 .bot_intro
 {
+    text-align: center;
     font-size: 900%;
     font-weight: 800;
     padding-top: 100%;
@@ -99,6 +102,7 @@ header{
 }
 .bot_icon
 {
+    text-align: center;
     width: auto;
     height: auto;
     top: auto;
